@startuml
'https://plantuml.com/class-diagram

class Basic_Info
class Task
class User
class Project

Project o-- Task
User o-- Project
Basic_Info <|- Task
Basic_Info <|- Project
 GenerateReport o-- User

abstract class Basic_Info{
name;
state;
date_added;
date_start;
date_end;
deadline;
}

class Task{
description;
endTask();
}

class Project{
listOfTask;

addTask();
deleteTask();
sortTask();
}

class User{
username;
listOfToDoProjects;
listOfUnfinishedProjects;
listOfFinishedProjects;
addToDoProject();
addUnfinishedProject();
addFinishedProject();
deleteToDoProject();
deleteUnfinishedProject();
deleteFinishedProject();
sortProject();
ifStarted();
ifFinished();
}

class GenerateReport{
generate();
averageFreqOfTasks();
amountOfTasksToDo();
amountOfProjectsToDo();
amountOfFinishedTasks();
amountOfFinishedProjects();
amountOfUnfinishedTasks();
amountOfUnfinishedProjects();
averageTimeOfTask();

}
@enduml
